--- a/semana-02/Css/style.css
+++ b/semana-02/Css/style.css
@@ -9,10 +9,11 @@ h1,h2,h3,h4,a,p{
     border: 0px;
 }
 
-body {
-    position:absolute
-    heigh: 900px
-    width: 1144px;
+body{
+   position:absolute;
+   height: 900px;
+   width: 1144px;
+   margin-left: 180px;
 }
 
 aside{
@@ -20,11 +21,13 @@ aside{
     height: 982px;
     position: fixed;
     background-color: white;
+    left: 0px;
+    top: 0px;
 }
 
 #logo{
     text-align: center;
-    font-size 20px;
+    font-size: 20px;
     color:#373867;
     display: inline-block;
     padding-left: 10px;
@@ -33,6 +36,7 @@ aside{
     font-size: 20px;
     margin-left: 0px;
     background-color: gray;
+    width: 78%;
 }
 
 title{
@@ -44,7 +48,7 @@ title{
 }
 
 aside ul li a{
-    width: 100%;
+    width: 70%;
     height: 20px;
     padding-right: 20px;
     padding-top: 5px;
@@ -92,18 +96,33 @@ aside a img{
     margin-left: 20px;
 }
 
+
 header{
     height: 1395px;
     width: 982px;
-    margin-left: 152px;
+    margin-left: 130px;
     margin-top: 0px;
     background-image: url(../assets/imagen-header.png);
     background-repeat: no-repeat;
+    outline: 2px solid red;
 }
 
-.header-background{
-    background: rgba(0, 0, 0, 0.6);
-    width: 481px;
-    height: 981px;
-    margin-left: 76px;
+.header-text{
+    position: absolute;
+    top: 20px;
+    padding-left: 205px;
+    width: 366px;
+    height: 281px;
+}
+
+
+
+.header-tittle{
+    border-bottom: 2px solid #aace9b;
+    width: 199px;
+    top: 170px;
+    left: 205px;
+    font-size: 16px;
+    outline: 2px solid red;
+    margin-bottom: 50px;
 }
