--- a/semana-03/css/style.css
+++ b/semana-03/css/style.css
@@ -10,9 +10,9 @@ h1,h2,h3,h4,a,p{
 }
 
 body{
-   position:absolute;
+   /* position:absolute; */
    width: 100%;
-   margin-left: 180px;
+   /* margin-left: 180px; */
 }
 
 aside{
@@ -25,7 +25,7 @@ aside{
 }
 
 #logo{
-    width: 108%;
+    width: 100%;
     text-align: center;
     font-size: 20px;
     color:#373867;
@@ -96,9 +96,10 @@ aside a img{
 
 
 header{
-    height: 100%;
-    width: 100%;
+    height: 982px;
+    width:90%;
     margin-top: 0px;
+    margin-left: 10%;
     background-image: url('../assests/img.png/header-picture.png');
     background-repeat: no-repeat;
     /* padding: 100px 100px 100px 100px; */
@@ -109,16 +110,15 @@ header{
 .header-background{
     padding-left: 22px;
     padding-right: 7px;
-    padding-top: 170px;
     width: 366px;
-    height: 100%;
+    height: 982px;
     margin-left: 78px;
     background-color: rgba(0, 0, 0, 0.3);
     left: 50px;
 }
 
 header h1{
-    top: 170px;
+    padding-top: 170px;
     left: 205px;
     border-bottom: 2px solid #aace9b;
     font-size: 40px;
@@ -170,144 +170,68 @@ article h2{
     margin-top: 30px;
 }
 
-.main-container{
-    position: relative;
-    box-sizing: content-box;
-    height: max-content;
-    padding: 50px 100px;
-    padding: 50px 75px;
-    margin-top: 131px;
+.why-container{
+    padding-left: 163px;
 }
 
-.title-h2{
-    font-size: 35px;
-}
-
-.text-center{
+.why h2{
+    font-size: 40px;
+    font-weight: bold;
     text-align: center;
+    border-bottom: 10px solid #D9D9D9;
 }
 
-.line-gray{
-    display: inline-block;
-    width: 100%;
-    border-top: 10px solid #d9d9d9;
-    width: 1310px;
-    height: 10px;
-    left: 209px;
-    top: 47px;
-    padding: 50px 100px;
-    padding: 50px 50px;
+.card-box-white{
+    height: 515px;
+    padding-top: 163px;
+    padding-left: 162px;
 }
 
-.cards-white{
-    position: relative;
-    box-sizing: content-box;
-    height: max-content;
-    padding: 50px 100px;
-    padding: 50px 50px;
-    width: 1440px;
+.h3-left{
+    font-size: 40px;
+    font-weight: bold;
+    /* text-align: left; */
+    border-bottom: 4px solid #286276;
 }
 
-.card-box{
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    margin: auto;
-    padding: 100px 0px;
-    box-sizing: content-box;
-    margin-top: 131px;
-}
-
-.box-position{
-    float: left;
-    width: 60%;
-}
-
-.text-size-35{
-    font-size: 35px;
-}
-
-.line-greenblue{
-    display: inline-block;
-    width: 110%;
-    border-top: 5px solid #286276;
-}
-
-
-.text-size-30{
+.why-p-white{
+    width: 600px;
     font-size: 30px;
+    padding-top: 60px;
 }
 
-.text-container{
-    line-height: 1.5;
-    padding: 30px 0px
+.white-img{
+    padding-left: 882px;
+    margin-top: -365px;
+    margin-left: -235px;
 }
 
-.card-p-white{
-    line-height: 1;
-    padding: 30px 0px
+.card-box-gray{
+    height: 840px;
+    padding-top: 20px;
+    padding-left: 162px;
+    margin-left: 36px;
+    background-color: #D9D9D9;
 }
 
-.card-img{
-    float: left;
-    width: 40%;
+.gray-img{
+    margin-bottom: 251px;
+    padding-top: 227px;
 }
 
-.cards-gray{
-    position: relative;
-    box-sizing: content-box;
-    height: max-content;
-    padding: 50px 100px;
-    padding: 50px 50px;
-    background-color:  #D9D9D9;
+.h3-right{
+    padding-left: 698px;
+    margin-top: -620px;
+    font-size: 40px;
+    font-weight: bold;
+    border-bottom: 4px solid white;
 }
 
-.text-size-35-gray{
-    font-size: 35px;
-    margin-left: 146px;
-}
-
-.text-size-30-gray{
+.why-p-gray{
+    padding-top: 20px;
+    padding-left: 698px;
+    width: 480px;
     font-size: 30px;
-    margin-left: 146px;
-}
-
-.card-p-gray{
-    position: relative;
-    box-sizing: content-box;
-    height: max-content;
-    padding: 50px 100px;
-    padding: 50px 50px;
-    margin-left: 100px;
-    padding-top: 15px;
-}
-
-.line-white{
-    display: inline-block;
-    width: 100%;
-    border-top: 4px solid #FFFFFF;
-    width: 800px;
-    height: 10px;
-    left: 209px;
-    top: 47px;
-}
-
-.line-gray-thin{
-    display: inline-block;
-    width: 100%;
-    border-top: 4px solid gray;
-    width: 800px;
-    height: 10px;
-    left: 209px;
-    top: 47px;
-}
-
-.main-container{
-    position: relative;
-    box-sizing: content-box;
-    width: auto;
-    height: max-content;
-    padding: 20px 18px;
 }
 
 .f-title{
@@ -379,6 +303,7 @@ article h2{
 
 form{
     width: 1029px;
+    padding-top: 34px;
     margin-left: auto;
     margin-right:auto;
 }
@@ -430,11 +355,17 @@ form textarea{
 }
 
 .product-enterprise-support{
+    max-width: 90%;
+    height: 247;
+    margin-left: 36px;
     padding-left: 474px;
     padding-right: 416px;
     padding-top: 63px;
     margin-bottom: 74px;
     /* background-image: ; */
+    background-image: url('../assests/img.png/picture-footer.png');
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .product-enterprise-support div{
@@ -443,7 +374,7 @@ form textarea{
 }
 
 footer {
-    width: 90%;
+    max-width: 90%;
     height: 176px;
     margin-right: 0px;
     padding-left: 561px;
