--- a/semana-03/css/style.css
+++ b/semana-03/css/style.css
@@ -51,6 +51,7 @@ aside ul li a{
     padding-right: 20px;
     padding-top: 5px;
     margin-top: 25px;
+    margin-left: 5px;
     background-color: white;
     text-align: left;
     font-size: 15px;
@@ -58,6 +59,10 @@ aside ul li a{
     color: red;
     text-decoration-line: none;
     display: inline-block;
+}
+
+aside a:hover{
+    color: black;
 }
 
 aside ul li a img{
@@ -72,6 +77,10 @@ aside ul li a img{
     font-weight: medium;
     color: red;
     text-decoration-line: underline;
+}
+
+#contact-us-icon p{
+    font-size: 12px;
 }
 
 aside a{
@@ -139,13 +148,18 @@ header p{
     line-height: 30px;
 }
 
-article{
+.who-container{
+    padding-left: 10%;
+}
+
+.funcionalities article{
     margin-top: 100px;
     padding: 50px 75px;
 }
 
 article h2{
-    width: 1176px;
+    margin-left: 162px;
+    margin-top: 71px;
     border-bottom: 10px solid #d9d9d9;
     font-size: 50px;
     font-weight: 700;
@@ -153,8 +167,10 @@ article h2{
 }
 
 .p1{
+    height: 206px;
     font-size: 20px;
     font-weight: 500;
+    margin-left: 162px;
     line-height: 30px;
     text-align: center;
     color: #373867;
@@ -162,8 +178,10 @@ article h2{
 }
 
 .p2{
+    height: 206px;
     font-size: 18px;
     font-weight: 400;
+    margin-left: 162px;
     line-height: 30px;
     text-align: center;
     color: #49a37b;
@@ -171,12 +189,14 @@ article h2{
 }
 
 .why-container{
-    padding-left: 163px;
+    padding-left: 10%;
 }
 
-.why h2{
+.why-container h2{
     font-size: 40px;
     font-weight: bold;
+    margin-left: 162px;
+    margin-top: 48px;
     text-align: center;
     border-bottom: 10px solid #D9D9D9;
 }
@@ -203,20 +223,20 @@ article h2{
 .white-img{
     padding-left: 882px;
     margin-top: -365px;
-    margin-left: -235px;
+    margin-left: -259px;
 }
 
 .card-box-gray{
-    height: 840px;
+    height: 515px;
     padding-top: 20px;
-    padding-left: 162px;
+    padding-left: 63px;
     margin-left: 36px;
     background-color: #D9D9D9;
 }
 
 .gray-img{
     margin-bottom: 251px;
-    padding-top: 227px;
+    padding-top: 46px;
 }
 
 .h3-right{
@@ -229,12 +249,17 @@ article h2{
 
 .why-p-gray{
     padding-top: 20px;
-    padding-left: 698px;
+    padding-left: 702px;
     width: 480px;
     font-size: 30px;
 }
 
+.functionalities{
+    padding-left: 163px;
+}
+
 .f-title{
+    margin-left: 162px;
     font-size: 35px;
     font-weight: bold;
     text-align: center;
@@ -257,14 +282,15 @@ article h2{
 }
 
 .functionalities article{
+    margin-top: 50px;
+    margin-right: 110px;
     display: inline-block;
-    width: 39%;
+    width: 38%;
 }
 
 .f-container{
-    width: 100%;
-    padding-left: 206px;
-    padding-right:206px;
+    width: 90%;
+    margin-left: 10%;
     padding-top: 34px;
     padding-bottom: 54px;
 }
@@ -295,17 +321,20 @@ article h2{
 }
 
 .c-title{
+    margin-left: 163px;
     font-size: 35px;
     font-weight: bold;
     text-align: center;
     border-bottom: 10px solid #D9D9D9;
 }
 
+.c-container{
+    padding-left: 10%;
+}
 form{
     width: 1029px;
     padding-top: 34px;
-    margin-left: auto;
-    margin-right:auto;
+    margin-left: 163px;
 }
 
 form span{
@@ -346,7 +375,7 @@ form textarea{
     height: 48px;
     margin-top: 16px;
     margin-left: 731px;
-    padding: 15px 20px 15px 20px;
+    padding: 0px 20px 15px 20px;
     background-color: #F13312;
     border-radius: 5px;
     color: #373867;
@@ -356,16 +385,13 @@ form textarea{
 
 .product-enterprise-support{
     max-width: 90%;
-    height: 247;
+    height: 176px;
     margin-left: 36px;
+    margin-top: 16px;
     padding-left: 474px;
-    padding-right: 416px;
     padding-top: 63px;
-    margin-bottom: 74px;
-    /* background-image: ; */
     background-image: url('../assests/img.png/picture-footer.png');
     background-size: contain;
-    background-repeat: no-repeat;
 }
 
 .product-enterprise-support div{
@@ -377,15 +403,34 @@ footer {
     max-width: 90%;
     height: 176px;
     margin-right: 0px;
-    padding-left: 561px;
+    padding-left: 10%;
     background-color: #AACE9B;
+}
+
+footer div:first-child{
+    display: inline-block;
+    margin-left: 465px;
+    margin-right: 40px;
+    margin-top: 25px;
 }
 
 footer div{
     display: inline-block;
-    width: 80px;
+    margin-right: 40px;
+    margin-bottom: 16px;
+}
+
+footer i{
+    color: white;
+    font-size: 38px;
 }
 
 footer p{
     text-align: center;
+    margin-top: 25px;
+    line-height: 15px;
+}
+
+footer i:hover, .why-container h3:hover, .f-container h3:hover, .product-enterprise-support h4:hover{
+    color: red;
 }
