--- a/semana-03/css/header.css
+++ b/semana-03/css/header.css
@@ -19,7 +19,7 @@ header{
 }
 
 header h1{
-    padding-top: 170px;
+    padding-top: 24px;
     left: 205px;
     border-bottom: 2px solid #aace9b;
     font-size: 40px;
@@ -27,54 +27,24 @@ header h1{
 }
 
 header h2{
-    margin-bottom: 68px;
+    margin-bottom: 12px;
     margin-top: 17px;
     font-size: 20px;
     font-weight: 400;
 }
 
-header p{
-    display: none;
-}
-
-.who-container{
-    padding-left: 10%;
-}
-
-.funcionalities article{
-    margin-top: 100px;
-    padding: 50px 75px;
-}
-
-article h2{
-    margin-left: 162px;
-    margin-top: 71px;
-    border-bottom: 10px solid #d9d9d9;
-    font-size: 50px;
-    font-weight: 700;
-    text-align: center;
-}
-
-.p1{
-    height: 206px;
-    font-size: 20px;
-    font-weight: 500;
-    margin-left: 162px;
-    line-height: 30px;
-    text-align: center;
-    color: #373867;
-    margin-top: 83px;
-}
-
-.p2{
-    height: 206px;
+.header-p1{
+    margin-top: 13px;
     font-size: 18px;
     font-weight: 400;
-    margin-left: 162px;
-    line-height: 30px;
-    text-align: center;
-    color: #49a37b;
-    margin-top: 30px;
+    line-height: 20px;
+}
+
+.header-p2{
+    margin-top: 10px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 20px;
 }
 
 
