--- a/semana-03/css/main.css
+++ b/semana-03/css/main.css
@@ -12,7 +12,6 @@ main{
 article h2{
     margin-left: 0px;
     margin-top: 60px;
-    margin-right: -19px;
     border-bottom: 10px solid #d9d9d9;
     font-size: 50px;
     font-weight: 700;
@@ -45,8 +44,6 @@ article h2{
 .why-container h2{
     font-size: 40px;
     font-weight: bold;
-    margin-left: -76px;
-    margin-right: -32px;
     margin-top: 48px;
     text-align: center;
     border-bottom: 10px solid #D9D9D9;
@@ -124,43 +121,51 @@ article h2{
     font-size: 20px;
 }
 
+.c-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .c-title{
-    margin-left: 163px;
     font-size: 35px;
     font-weight: bold;
-    text-align: center;
     border-bottom: 10px solid #D9D9D9;
 }
 
-.c-container{
-    padding-left: 10%;
-}
 form{
-    width: 1029px;
-    padding-top: 34px;
-    margin-left: 163px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-form span{
-    display: inline-block;
-    width: 49.8%;
+form div{
+    max-width: 80%;
+}
+
+.name-contact{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.name-contact span{
+    max-width: 45%;
 }
 
 form input, form select{
-    width: 100%;
     height: 37px;
     border: 1px solid #373867;
     border-radius: 4px;
 }
 
 form textarea{
-    width: 100%;
+    max-width: 100%;
     height: 224px;
     border: 1px solid #373867;
     border-radius: 4px;
     resize: none;
 }
-
+/* 
 .send-button{
     width: 177px;
     height: 48px;
@@ -185,7 +190,22 @@ form textarea{
     color: #373867;
     font-size: 15px;
     font-weight: 500;
+} */
+
+.product-enterprise-support{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 16px;
+    padding-top: 63px;
+    background-image: url('../assests/img.png/picture-footer.png');
+    background-size: contain;
 }
+
+.product-enterprise-support div{
+    width: 32.8%;
+}
+
 
 @media screen and (max-width: 1024px) {
 }
