--- a/semana-02/Css/style.css
+++ b/semana-02/Css/style.css
@@ -11,14 +11,13 @@ h1,h2,h3,h4,a,p{
 
 body{
    position:absolute;
-   height: 900px;
-   width: 1144px;
+   width: 100%;
    margin-left: 180px;
 }
 
 aside{
-    width: 180px;
-    height: 982px;
+    width: 10%;
+    height: 100%;
     position: fixed;
     background-color: white;
     left: 0px;
@@ -26,17 +25,16 @@ aside{
 }
 
 #logo{
+    width: 108%;
     text-align: center;
     font-size: 20px;
     color:#373867;
     display: inline-block;
-    padding-left: 10px;
-    padding-right: 30px;
-    text-align: center;
+    /* padding-left: 10px;
+    padding-right: 30px; */
     font-size: 20px;
     margin-left: 0px;
     background-color: gray;
-    width: 78%;
 }
 
 title{
@@ -98,26 +96,26 @@ aside a img{
 
 
 header{
-    height: 1395px;
-    width: 982px;
-    margin-left: 130px;
+    height: 100%;
+    width: 100%;
+    /* margin-left: 130px; */
     margin-top: 0px;
-    background-image: url(../assets/imagen-header.png);
+    background-image: url('../assests/img.png/header-picture.png');
     background-repeat: no-repeat;
     outline: 2px solid red;
 }
 
-.header-text{
-    position: absolute;
-    top: 20px;
+.header-background{
+    /* position: absolute; */
     padding-left: 205px;
     width: 366px;
-    height: 281px;
+    height: 100%;
+    margin-left: 78px;
+    background-color: gray;
+    left: 50px;
 }
 
-
-
-.header-tittle{
+header h1{
     border-bottom: 2px solid #aace9b;
     width: 199px;
     top: 170px;
@@ -126,3 +124,78 @@ header{
     outline: 2px solid red;
     margin-bottom: 50px;
 }
+
+/* .who-container{
+    margin-top: 50px;
+    /* box-sizing: content-box; */
+    /* height: max-content;
+    padding: 50px 75px;
+} */
+
+/* .who-tittle{
+    font-size: 35px;
+    text-align: center;
+}
+
+.tittle-one{
+    text
+}| */ */
+
+.main-container{
+    position: relative;
+    box-sizing: content-box;
+    height: max-content;
+    padding: 50px 100px;
+    padding: 50px 75px;
+}
+
+.cards-container{
+    position: relative;
+    box-sizing: content-box;
+    height: max-content;
+    padding: 50px 100px;
+    padding: 50px 50px;
+}
+
+
+.box-60p{
+    float: left;
+    width: 60%;
+}
+
+.text-size-35{
+    font-size: 35px;
+    margin-top: 247px;
+    text-align: left;
+}
+
+.line-greenblue{
+    display: inline-block;
+    width: 110%;
+    border-top: 5px solid #286276;
+}
+
+.text-size-30{
+    font-size: 30px;
+}
+
+/* .text-container{
+    line-height: 1.5;
+    padding: 30px 0px
+} */
+
+.text-size-30{
+    font-size: 30px;
+}
+
+.card-text-container{
+    line-height: 1;
+    padding: 30px 0px
+}
+
+.box-40p{
+    float: left;
+    width: 40%;
+    margin-top: 220px;
+}
+
