--- a/semana-03/css/main.css
+++ b/semana-03/css/main.css
@@ -195,7 +195,7 @@ form textarea{
 .product-enterprise-support{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-content: center;
     margin-top: 16px;
     padding-top: 63px;
     background-image: url('../assests/img.png/picture-footer.png');
@@ -205,7 +205,6 @@ form textarea{
 .product-enterprise-support div{
     width: 32.8%;
 }
-
 
 @media screen and (max-width: 1024px) {
 }
